[project]
name = "pyspark_huggingface"
version = "1.0.0"
description = "A DataSource for reading and writing HuggingFace Datasets in Spark"
authors = [
    {name = "allisonwang-db", email = "allison.wang@databricks.com"},
    {name = "lhoestq", email = "quentin@huggingface.co"},
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.2",
    "huggingface-hub>=0.27.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyarrow-stubs>=19.4",
    "pyspark>=4.0.0",
    "pytest>=8.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["uv_build>=0.7.3,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
